Adds load static files to fix syntax error

--- a/mysite/home/templates/home/test.html
+++ b/mysite/home/templates/home/test.html
@@ -3,6 +3,7 @@
 {% block title %}Test Page{% endblock %}
 
 {% block body %}
+{% load staticfiles %}
 <link rel="stylesheet" href="{% static 'css/font-awesome.css' %}">
 <h2 class="text-center">
     Home app - Test page (home/templates/home/test.html)
