--- a/mysite/crimeprediction/forecaster/templates/results.html
+++ b/mysite/crimeprediction/forecaster/templates/results.html
@@ -3,9 +3,14 @@
 {% block title %}Results{% endblock %}
 
 {% block body %}
-    <h2>
-        Results for {{ zipcode }}
-    </h2>
+
+    <div class="row">
+        <div class="col" style="text-align:center;">
+            <h1>
+                Results for {{ zipcode }}
+            </h1>
+        </div>
+    </div>
 
 
 {% endblock %}
