Added in progress bars loading numerical data
Progress bars on results page load numerical data from back-end. We can
use this however needed.

--- a/mysite/crimeprediction/forecaster/templates/base.html
+++ b/mysite/crimeprediction/forecaster/templates/base.html
@@ -2,14 +2,12 @@
 <html lang="en">
     <head>
         <style type="text/css">
-            .navigation {
-                margin-top: 10px;
-            }
+
         </style>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     </head>
-    <body>
+    <body style="margin: 10px;">
         <div class="container">
             <!--NAVBAR-->
             <div class="row">
