prediction tab added

--- a/mysite/crimeprediction/forecaster/templates/base.html
+++ b/mysite/crimeprediction/forecaster/templates/base.html
@@ -6,8 +6,30 @@
         <style type="text/css" > #map {
                 height: 400px;
                 width: 70%;
-               }
-        </style>
+               };
+
+               #map_assault {
+                height: 400px;
+                width: 100%;
+               };
+               #map_battery {
+                height: 400px;
+                width: 100%;
+               };
+
+               #map_burglary {
+                height: 400px;
+                width: 100%;
+               };
+               #map_theft {
+                height: 400px;
+                width: 100%;
+               };
+                #map_robbery {
+                height: 400px;
+                width: 100%;
+               } ;       
+           </style>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script src="https://code.highcharts.com/maps/highmaps.js"></script>
