--- a/mysite/crimeprediction/forecaster/templates/trends.html
+++ b/mysite/crimeprediction/forecaster/templates/trends.html
@@ -118,6 +118,55 @@ Highcharts.chart('location-cont', {
     ]
 });    </script>
 
+
+    <div id="arrests-cont" style="width:100%; height:400px;"></div>
+    <script type="text/javascript">
+        Highcharts.chart('arrests-cont', {
+    chart: {
+        type: 'column'
+    },
+    title: {
+        text: 'Number of Arrests Per Year'
+    },
+    xAxis: {
+        categories: [2012, 2013, 2014, 2015, 2016, 2017
+        ],
+        crosshair: true
+    },
+    yAxis: {
+        min: 0,
+        title: {
+            text: 'Number of arrests'
+        }
+    },
+    tooltip: {
+        headerFormat: '<span style="font-size:10px">{point.key}</span><table>',
+        pointFormat: '<tr><td style="color:{series.color};padding:0">{series.name}: </td>' +
+            '<td style="padding:0"><b>{point.y:.1f}</b></td></tr>',
+        footerFormat: '</table>',
+        shared: true,
+        useHTML: true
+    },
+    plotOptions: {
+        column: {
+            pointPadding: 0.2,
+            borderWidth: 0
+        }
+    },
+        series: [
+    {% for arr in arrest_data %}
+    {
+        name: '{{arr}}',
+        data: [
+        {% for data in arrest_data|get_val:arr %}
+            {{data}},
+        {% endfor %}
+        ]
+    },
+    {% endfor %}
+    ]
+});
+    </script>
 <div id="map"></div>
 
 <script type="text/javascript" src= "{% static 'js/heatmap.js' %}">
