changes to predict

--- a/mysite/crimeprediction/forecaster/templates/predict.html
+++ b/mysite/crimeprediction/forecaster/templates/predict.html
@@ -15,29 +15,31 @@
 <span class="border-0">
   
 </span>
-    <div class="row" style= "border: 2px solid black; margin: 35px;">
-        <div class="col-lg-6" id = 'map_assault' style="width: 600px; height: 400px; padding-left: 20px; margin: 2px;" ></div>
-        <div class="col-lg-7" style="width: 470px;"> <h1>CRIME TYPE: ASSAULT</h1></div>
+    <div class="row" style= "border: 2px solid black; margin: 100px; width: 1200px">
+        <div class="col-lg-6" id = 'map_assault' style="width: 600px; height: 400px; margin-left: 20px; margin-top: 2px; margin-bottom: 2px;" ></div>
+        <div class="col-lg-7" style="width: 470px;"> <h1>CRIME TYPE: ASSAULT</h1>
+        {% for i in assault_len %}
+        {% endfor %}
+      </div>
     </div>
-    <div id="cc" style="height: 30px"></div>
-    <div class="row" style= "border: 2px solid black; margin: 35px;">
-        <div class="col-lg-7" style="width: 470px;"><h1>CRIME TYPE: BATTERY</h1></div>
+    <div class="row" style= "border: 2px solid black; margin: 100px; width: 1200px">
+        <div class="col-lg-7" style="width: 550px;"><h1>CRIME TYPE: BATTERY</h1></div>
         <div class="col-lg-8" id = 'map_battery' style="width: 600px; height: 400px; margin: 2px" ></div>
     </div>
-    <div id="cc" style="height: 30px"></div>
-    <div class="row" style= "border: 2px solid black; margin: 35px">
+<!--     <div id="cc" style="height: 30px"></div>
+ -->    <div class="row" style= "border: 2px solid black; margin: 100px; width: 1200px">
         <div class="col-lg-6" id = 'map_burglary' style="width: 600px; height: 400px; padding-left: 20px; margin: 2px;" ></div>
-        <div class="col-lg-7" style="width: 470px;">CRIME TYPE: BURGLARY</div>
+        <div class="col-lg-7" style="width: 470px;"><h1> CRIME TYPE: BURGLARY </h1></div>
     </div>
-    <div id="cc" style="height: 30px"></div>
-    <div class="row" style= "border: 2px solid black; margin: 35px;">
-        <div class="col-lg-7" style="width: 470px;">CRIME TYPE: ROBBERY</div>
+<!--     <div id="cc" style="height: 30px"></div>
+ -->    <div class="row" style= "border: 2px solid black; margin: 100px;width: 1200px">
+        <div class="col-lg-7" style="width: 550px;"><h1> CRIME TYPE: ROBBERY </h1> </div>
         <div class="col-lg-8" id = 'map_robbery' style="width: 600px; height: 400px; margin: 2px; " ></div>
     </div>
-    <div id="cc" style="height: 30px"></div>
-    <div class="row" style= "border: 2px solid black; margin: 35px;">
+<!--     <div id="cc" style="height: 30px"></div>
+ -->    <div class="row" style= "border: 2px solid black; margin: 100px;width: 1200px">
         <div class="col-lg-6" id = 'map_theft' style="width: 600px; height: 400px; padding-left: 20px; margin: 2px;" ></div>
-        <div class="col-lg-7" style="width: 470px;">CRIME TYPE: THEFT</div>
+        <div class="col-lg-7" style="width: 470px;"><h1> CRIME TYPE: THEFT </h1></div>
     </div>
 </div>
     
@@ -60,7 +62,7 @@
             var marker = new google.maps.Marker({
               position: {lat: {{assault_lat|get_val:i}}, lng: {{assault_lon|get_val:i}}},
               map: map,
-              title: 'Zip code: {{assault_zip|get_val:i}}; \n Predicted crime:{{assault_val|get_val:i}}'
+              title: 'Zip code: {{assault_zip|get_val:i}}\nPredicted crime: {{assault_val|get_val:i|floatformat:0}}'
             });
 
 
@@ -104,7 +106,7 @@
             var marker = new google.maps.Marker({
               position: {lat: {{battery_lat|get_val:i}}, lng: {{battery_lon|get_val:i}}},
               map: map,
-              title: 'Zip code: {{battery_zip|get_val:i}}; \n Predicted crime: {{battery_val|get_val:i}}'
+              title: 'Zip code: {{battery_zip|get_val:i}}\nPredicted crime: {{battery_val|get_val:i|floatformat:0}}'
             });
 
 
@@ -145,7 +147,7 @@
             var marker = new google.maps.Marker({
               position: {lat: {{theft_lat|get_val:i}}, lng: {{theft_lon|get_val:i}}},
               map: map,
-              title: 'Zip code: {{theft_zip|get_val:i}};  \n Predicted crimes {{theft_val|get_val:i}}'
+              title: 'Zip code: {{theft_zip|get_val:i}};  \nPredicted crimes {{theft_val|get_val:i|floatformat:0}}'
             });
 
 
@@ -187,7 +189,7 @@
             var marker = new google.maps.Marker({
               position: {lat: {{burglary_lat|get_val:i}}, lng: {{burglary_lon|get_val:i}}},
               map: map,
-              title: 'Zip code: {{burglary_zip|get_val:i}}; \n Predicted crime: {{burglary_val|get_val:i}}'
+              title: 'Zip code: {{burglary_zip|get_val:i}}\nPredicted crime: {{burglary_val|get_val:i|floatformat:0}}'
             });
 
 
@@ -236,7 +238,7 @@
             var marker = new google.maps.Marker({
               position: {lat: {{robbery_lat|get_val:i}}, lng: {{robbery_lon|get_val:i}}},
               map: map,
-              title: 'Zip code: {{robbery_zip|get_val:i}}; \n Predicted crime: {{robbery_val|get_val:i}}'
+              title: 'Zip code: {{robbery_zip|get_val:i}}\nPredicted crime: {{robbery_val|get_val:i|floatformat:0}}'
             });
 
 
