--- a/mysite/crimeprediction/forecaster/templates/base.html
+++ b/mysite/crimeprediction/forecaster/templates/base.html
@@ -64,10 +64,10 @@
                         <div class = "collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li class=''>
-                                    {% block nav-home %}<a href="/forecaster/trends">Trends</a>{% endblock %}
+                                    {% block nav-home %}<a href="/forecaster/trends">Past Trends</a>{% endblock %}
                                 </li>
                                 <li class=''>
-                                    <a href="/forecaster/predict">Predictions</a>
+                                    <a href="/forecaster/predict">Weekly Forecast</a>
                                 </li>
                             </ul>
                         </div>
