--- a/mysite/crimeprediction/forecaster/templates/predict.html
+++ b/mysite/crimeprediction/forecaster/templates/predict.html
@@ -11,10 +11,55 @@
 <div id="cc" style="height: 30px">
 </div>
 
-<div class="container-fluid">
-<span class="border-0">
-  
-</span>
+<div class="container-fluid"><h1> Predicting the crime rate </h1>
+  <ul ">
+    <li>
+      We have attempted to forecast the number of crimes across zip codes using <a href="https://en.wikipedia.org/wiki/Regression_analysis">regression models</a> 
+    </li>
+    <li>
+      We have tried using data from different sources and categories to consider various features like:
+      <ul class="list-inline">
+      <li>
+        Unemployment rate | 
+      </li>        
+      <li>
+        Population | 
+      </li>
+      <li>
+        Weather conditions | 
+      </li>
+      <li>
+        Number of abandoned houses | 
+      </li>
+      <li>
+        Number of street lights not working ...
+      </li>
+      </ul>  
+    </li>
+    <li>
+      We created different models for each crime type and below you can see a geographical representation of the predicted crimes at different zip codes.
+    </li>
+    <ul class="list-inline">
+      <li>
+        <a href="#map_assault"> Assault </a> |
+      </li>
+      <li>
+        <a href="#map_battery"> Battery </a> | 
+      </li>
+      <li>
+        <a href="#map_burglary"> Burglary </a> | 
+      </li>
+      <li>
+        <a href="#map_robbery"> Robbery </a> | 
+      </li>
+      <li>
+        <a href="#map_theft"> Theft </a>
+      </li>
+    </ul>
+    <li>
+      Hovering over the markers on the map can show you the zip code and the prediction value
+    </li>
+  </ul>
     <div class="row" style= "border: 2px solid black; margin: 100px; width: 1200px">
         <div class="col-lg-6" id = 'map_assault' style="width: 600px; height: 400px; margin-left: 20px; margin-top: 2px; margin-bottom: 2px;" ></div>
         <div class="col-lg-7" style="width: 470px;"> <h1>CRIME TYPE: ASSAULT</h1>
