adding formatting changes to prediction tab

--- a/mysite/crimeprediction/forecaster/templates/predict.html
+++ b/mysite/crimeprediction/forecaster/templates/predict.html
@@ -11,7 +11,7 @@
 <div id="cc" style="height: 30px">
 </div>
 
-<div class="container-fluid"><h1> Predicting the crime rate </h1>
+<div class="container-fluid" style="margin-left: 100px;  "><h1> Predicting the crime rate </h1>
   <ul ">
     <li>
       We have attempted to forecast the number of crimes across zip codes using <a href="https://en.wikipedia.org/wiki/Regression_analysis">regression models</a> 
@@ -60,31 +60,31 @@
       Hovering over the markers on the map can show you the zip code and the prediction value
     </li>
   </ul>
-    <div class="row" style= "border: 2px solid black; margin: 100px; width: 1200px">
+    <div class="row" style= "border: 2px solid black; margin: 80px; width: 1050px">
         <div class="col-lg-6" id = 'map_assault' style="width: 600px; height: 400px; margin-left: 20px; margin-top: 2px; margin-bottom: 2px;" ></div>
-        <div class="col-lg-7" style="width: 470px;"> <h1>CRIME TYPE: ASSAULT</h1>
+        <div class="col-lg-7" style="width: 380px;"> <h2>CRIME TYPE: ASSAULT</h2>
         {% for i in assault_len %}
         {% endfor %}
       </div>
     </div>
-    <div class="row" style= "border: 2px solid black; margin: 100px; width: 1200px">
-        <div class="col-lg-7" style="width: 550px;"><h1>CRIME TYPE: BATTERY</h1></div>
+    <div class="row" style= "border: 2px solid black; margin: 80px; width: 1050px">
+        <div class="col-lg-7" style="width: 420px;"><h2>CRIME TYPE: BATTERY</h2></div>
         <div class="col-lg-8" id = 'map_battery' style="width: 600px; height: 400px; margin: 2px" ></div>
     </div>
 <!--     <div id="cc" style="height: 30px"></div>
- -->    <div class="row" style= "border: 2px solid black; margin: 100px; width: 1200px">
-        <div class="col-lg-6" id = 'map_burglary' style="width: 600px; height: 400px; padding-left: 20px; margin: 2px;" ></div>
-        <div class="col-lg-7" style="width: 470px;"><h1> CRIME TYPE: BURGLARY </h1></div>
+ --><div class="row" style= "border: 2px solid black; margin: 80px; width: 1050px">
+        <div class="col-lg-6" id = 'map_burglary' style="width: 600px; height: 400px; margin-left: 20px; margin-top: 2px; margin-bottom: 2px;" ></div>
+        <div class="col-lg-7" style="width: 380px;"><h2> CRIME TYPE: BURGLARY </h2></div>
     </div>
 <!--     <div id="cc" style="height: 30px"></div>
- -->    <div class="row" style= "border: 2px solid black; margin: 100px;width: 1200px">
-        <div class="col-lg-7" style="width: 550px;"><h1> CRIME TYPE: ROBBERY </h1> </div>
+ --> <div class="row" style= "border: 2px solid black; margin: 80px;width: 1050px">
+        <div class="col-lg-7" style="width: 420px;"><h2> CRIME TYPE: ROBBERY </h2> </div>
         <div class="col-lg-8" id = 'map_robbery' style="width: 600px; height: 400px; margin: 2px; " ></div>
     </div>
 <!--     <div id="cc" style="height: 30px"></div>
- -->    <div class="row" style= "border: 2px solid black; margin: 100px;width: 1200px">
-        <div class="col-lg-6" id = 'map_theft' style="width: 600px; height: 400px; padding-left: 20px; margin: 2px;" ></div>
-        <div class="col-lg-7" style="width: 470px;"><h1> CRIME TYPE: THEFT </h1></div>
+ -->    <div class="row" style= "border: 2px solid black; margin: 80px;width: 1050px">
+        <div class="col-lg-6" id = 'map_theft' style="width: 600px; height: 400px; margin-left: 20px; margin-top: 2px; margin-bottom: 2px;" ></div>
+        <div class="col-lg-7" style="width: 380px;"><h2> CRIME TYPE: THEFT </h2></div>
     </div>
 </div>
     
